fixed grid spacing, add to cart function btn

--- a/style.css
+++ b/style.css
@@ -355,24 +355,31 @@ a:before {
 .product-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 3 items in a row */
-    grid-gap: 20px;
+    grid-gap: 30px;
+    row-gap: 50px;
     grid-auto-rows: minmax(100px, auto); /* min height, and allow for growth */
     max-width: 1200px;
     margin: -100px auto 0;
+    
 }
 
 .product-item {
+    display: flex;
+    flex-direction: column; /* Stack children vertically */
+    justify-content: space-between; /* Utilize available space between items */
     border: 1px solid #FFFEFE;
     padding: 10px;
+    gap: 20px;
     text-align: center;
     font-family: 'MrGeorge', sans-serif;
     background: #FFFFFF;
     border-radius: 10px;
     box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
-    font-size: 55px; 
-    margin-right: 10px;
-    padding-top: 100px;
+    font-size: 55px; /* You might want to adjust this font size */
+    /* Removed margin-right and padding-top from your original styles for better alignment */
+    height: 100%; /* Ensure the item takes full available height */
 }
+
 
 .product-item img {
     border-radius: 10px;
@@ -388,9 +395,45 @@ a:before {
     font-size: 24px;
 }
 
-.product-price:hover {
-    
+.product-price {
+    display: inline-block;
+    position: relative;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s;
 }
+
+.product-price:after {
+    content:'';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -5px;
+    left: 0;
+    background-color: black;
+    transition: width 0.3s;
+}
+
+.product-price:hover:after {
+    width: 100%;
+}
+
+.add-to-cart-btn {
+    padding: 10px 20px;
+    background-color: #f0c14b;
+    border: 1px solid #a88734 #9c7e31 #846a29;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+    /* Ensure there's no conflicting margin or padding that might push the button */
+}
+
+.add-to-cart-btn:hover {
+    background-color: #E6AF4B;
+}
+
 
 
 
